<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Connect">

    <com.google.android.material.appbar.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:theme="@style/AppTheme.AppBarOverlay">

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="?attr/colorPrimary"
            app:popupTheme="@style/AppTheme.PopupOverlay" />

    </com.google.android.material.appbar.AppBarLayout>

    <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent" android:layout_height="match_parent" android:background= "#454545">

    </RelativeLayout>

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#FFFE"
        >

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_marginTop="100dp"
            android:layout_height="wrap_content">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="0.1"
                android:text="RX:"
                android:ellipsize="end"
                android:maxLines="1"
                android:textStyle="bold" />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="0.9"
                android:ellipsize="end"
                android:maxLines="1"
                android:text="Read Buffer"
                android:id="@+id/readBuffer"
                android:layout_centerHorizontal="true" />
        </LinearLayout>

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="0.1"
                android:text="Status:"
                android:ellipsize="end"
                android:maxLines="1"
                android:textStyle="bold"
                />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="0.9"

                android:text="Bluetooth Status"
                android:id="@+id/bluetoothStatus"
                android:ellipsize="end"
                android:maxLines="1"
                android:layout_centerHorizontal="true"
                android:layout_alignTop="@+id/checkboxLED1" />
        </LinearLayout>

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Bluetooth ON"
            android:id="@+id/scan"
            android:layout_centerVertical="true"
            android:layout_toStartOf="@+id/off"
            />

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Bluetooth OFF"
            android:id="@+id/off"
            android:layout_alignBottom="@+id/scan"
            android:layout_toEndOf="@+id/PairedBtn"
            android:layout_toRightOf="@+id/PairedBtn" />

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Show paired Devices"
            android:id="@+id/PairedBtn"
            android:layout_below="@+id/scan"
            android:layout_toStartOf="@+id/discover" />

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Discover New Devices"
            android:id="@+id/discover"
            android:layout_below="@+id/off"
            android:layout_toRightOf="@+id/checkboxLED1"
            android:layout_toEndOf="@+id/checkboxLED1" />

        <ListView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/devicesListView"
            android:choiceMode="singleChoice"
            android:layout_below="@+id/PairedBtn"
            android:layout_alignRight="@+id/off"
            android:layout_alignEnd="@+id/off" />

    </LinearLayout>

    <include layout="@layout/content_connect" />
</androidx.coordinatorlayout.widget.CoordinatorLayout>