...
        android:layout_weight="2"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:background="?attr/buttoncolor">

        <TextView
            android:id="@+id/status_text"
            android:text="@string/status"
            android:textSize="34sp"
            android:textColor="?attr/textcolor"
            android:layout_centerInParent="true"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
...

    </GridLayout>


    <!--bottom bar -->
    <RelativeLayout
        android:id="@+id/connect_bar"
        style="?android:attr/buttonBarStyle"
        android:layout_weight="2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="?attr/barcolor"
        android:clickable="true"
...
