<resources>
    <string name="app_name">Cannect</string>
    <string name="rpm">RPM</string>
    <string name="temp">Temperature</string>
    <string name="settings">Settings</string>
    <string name="map">Map</string>
    <string name="dashboard">Dashboard</string>
    <string name="diag">Diagnostics</string>
    <string name="connect">Connect</string>
    <string name="status">Connected</string>

    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="title_activity_connect">Connect</string>
    <string name="title_activity_dashboard2">Dashboard2</string>
    <string name="tab_text_1">Tab 1</string>
    <string name="tab_text_2">Tab 2</string>
</resources>